finally fixed layout issues

--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -35,7 +35,8 @@
     color: var(--mantine-color-white);
   }
 }
+
 .login_link {
-  border: rem(1px) solid
+  border: 1px solid
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
